# Parametrox

./: .gitignore  Cargo.toml  README.md  draw.py  gates.py  main.py  tauri.conf.json  to_do.txt  tsconfig.json  update.py
EDA/: canvas.py  draw.py  main.py  to_do.txt  update.py
Solver/: __init__.py  func.py  mat.py  test.py  todo.txt  vec.py
app/: Cargo.toml
app/ui/: index.html  parameter.html
app/ui/scripts/: main.js  main.ts
app/ui/scripts/modules/: ribbon.js  ribbon.ts  viewport.js  viewport.ts  window.js  window.ts
app/ui/styles/: style.css
app/ui/window/parameter/: parameter.html  parameter.js  parameter.ts
scene/: Cargo.toml
scene/src/: render.rs
scene/src/site/: index.html  parameter.html
scene/src/site/json/: designRibbon.json
scene/src/site/scripts/: add_parameter.js  main.js
scene/src/site/styles/: style.css
solver/: Cargo.toml  todo.txt
solver/examples/: parse_example.rs
solver/src/: geometry.rs  lib.rs  matrix.rs  parameter.rs  parse.rs
src/: lib.rs  main.rs
