[package]
name = "parametrox"
version = "0.1.0"
edition = "2024"
crate-type = ["staticlib", "cdylib", "rlib"]

[workspace]
resolver = "3"
members = ["solver", "app"]



[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

app = {path = "app" }
solver = {path = "solver" }

[build-dependencies]
tauri-build = { version = "2", features = [] }
